--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,3 @@
 {
-    "build": {
-      "env": {
-        "NODE_ENV": "production"
-      },
-      "commands": {
-        "prebuild": "npm install --legacy-peer-deps"
-      }
-    }
-  }
-  
+  "installCommand": "npm install --legacy-peer-deps"
+}
