--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.13.0",
     "next": "15.0.0-rc.0",
     "next-pwa": "^5.6.0",
     "react": "19.0.0-rc-f994737d14-20240522",
