--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.13.0",
+    "google-search-results-nodejs": "^2.1.0",
     "next": "15.0.0-rc.0",
     "next-pwa": "^5.6.0",
     "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522"
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "serpapi": "^2.1.0"
   }
 }
