Refactor to add webcam processing

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-pwa": "^5.6.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react-webcam": "^7.2.0",
     "serpapi": "^2.1.0"
   }
 }
