--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "google-search-results-nodejs": "^2.1.0",
     "next": "15.0.0-rc.0",
     "next-pwa": "^5.6.0",
+    "qrcode.react": "^3.1.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-webcam": "^7.2.0",
