--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.13.0",
     "google-search-results-nodejs": "^2.1.0",
     "next": "15.0.0-rc.0",
+    "next-cloudinary": "^6.9.0",
     "next-pwa": "^5.6.0",
     "qrcode.react": "^3.1.0",
     "react": "19.0.0-rc-f994737d14-20240522",
