--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ai-preset",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
@@ -10,10 +10,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.13.0",
-    "google-search-results-nodejs": "^2.1.0",
     "next": "15.0.0-rc.0",
     "next-cloudinary": "^6.9.0",
-    "next-pwa": "^5.6.0",
     "qrcode.react": "^3.1.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-copy-to-clipboard": "^5.1.0",
@@ -21,7 +19,6 @@
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-webcam": "^7.2.0",
-    "remark-gfm": "^4.0.0",
-    "serpapi": "^2.1.0"
+    "remark-gfm": "^4.0.0"
   }
 }
