--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "qrcode.react": "^3.1.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-webcam": "^7.2.0",
